--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -49,6 +49,7 @@ header
 .session-card
   margin: 10px 0 10px 0
   border-bottom: 1px solid $gray
+  font-size: 14px
   &-header
     span
       margin-left: 20px
