--- a/app/views/client/main.haml
+++ b/app/views/client/main.haml
@@ -38,3 +38,5 @@
                 price - {{order.price }}
               %span{"ng-if"=>"session.status == 'completed' "}
                 commission - {{order.commission }}
+              %span
+                reason - {{order.reason }}
