--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -5,6 +5,9 @@
         %b
           бот
     .col-md-4
+      %button.btn
+        %a{href: '/download.csv'}
+          статистика
     .col-md-4
       %p
         = current_user.email if current_user
