sell_count, buy_count

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,13 +1,14 @@
 %header
-  .row
-    .col-md-4
-      %h1
-        %b
-          бот
-    .col-md-4
-      %button.btn
-        %a{href: '/download.csv'}
-          статистика
-    .col-md-4
-      %p
-        = current_user.email if current_user
+  .container
+    .row
+      .col-md-4
+        %h1
+          %b
+            бот
+      .col-md-4
+        %button.btn
+          %a{href: '/download.csv'}
+            статистика
+      .col-md-4
+        %p
+          = current_user.email if current_user
