--- a/app/views/client/main.haml
+++ b/app/views/client/main.haml
@@ -1,21 +1,22 @@
 .container-fluid{"ng-controller"=>"DashboardCtrl"}
-  %h2
-    Подключенные биржи
-    %span
-      %a{"ng-click"=>"addNewAccount()"}
-        %i.fa.fa-plus-circle{"aria-hidden" => "true"}
   .app-container
     .row
-      .accounts-item.col-md-3{"ng-repeat"=>"account in accounts"}
+      .col-md-3
+        %h2
+          Подключенные биржи
+          %a{"ng-click"=>"addNewAccount()"}
+            %i.fa.fa-plus-circle{"aria-hidden" => "true"}
+      .accounts-item.col-md-1{"ng-repeat"=>"account in accounts"}
         .accounts-item-card{"ng-click"=>"editAccount(account)"}
           %a{}
             {{ account.provider }}
           %span.actions{"ng-if"=>"false"}
             %a{"ng-click" => "deleteAccount($index, account.id)", style: "color: red;"}
               %i.fa.fa-times{"aria-hidden" => "true"}
+
     %hr
     .session-card.row{"ng-repeat"=>"session in sessions"}
-      .col-md-6
+      .col-md-3
         .session-card-header
           %h5
             {{session.date}}
@@ -25,7 +26,7 @@
             %span.session-card-desc{"ng-if"=>"session.status.completed"}
               {{session.buy_count}} buy, {{session.sell_count}} sell
           %p
-      .col-md-6
+      .col-md-9
         .session-card-order{"ng-repeat"=>"order in session.orders | orderBy: '-id' "}
           .session-card-order-header
             %p{"ng-class"=>"order.type == 'buy' ? 'text-success' : 'text-danger'"}
@@ -34,16 +35,23 @@
                 {{order.market}}
               %span
                 | quantity - {{order.quantity}}
-              %span{"ng-if"=>"session.status == 'completed' "}
-                | price - {{order.price }} |
-              %span{"ng-if"=>"session.status == 'completed' "}
-                | commission - {{order.commission }} |
-              %span{}
-                | spread - {{order.spread}}
-              %span{}
-                | volume - {{order.volume}} |
-            %p
-              %span.text-success{"ng-if"=>"session.status == 'completed' && order.type == 'sell' && order.profit"}
-                | profit - {{ order.profit }}
               %span
                 | reason - {{order.reason }}
+              %span
+                | buy_count - {{order.sell_count }}
+              %span
+                | sell_count - {{order.buy_count }}
+              %span
+                | yesterday_price - {{order.yesterday_price }}              
+            %p{"ng-if"=>"session.status == 'completed'"}
+              %span{"ng-if"=>"order.type == 'sell' && order.profit", "ng-class"=>"order.profit > 0 ? 'text-success' : 'text-danger'"}
+                %b
+                  profit - {{ order.profit }}
+              %span
+                | price - {{order.price }} |
+              %span
+                | commission - {{order.commission }} |
+              %span
+                | spread - {{order.spread}}
+              %span{}
+                | volume - {{order.volume}}
