--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import 'bootstrap/scss/bootstrap-flex';
 @import 'angular-carousel/dist/angular-carousel';
 @import 'angular-tooltips/dist/angular-tooltips';
+@import 'angular-ui-select/dist/select.min';
 @import 'angular-ui-notification/dist/angular-ui-notification';
 @import './client/*';
