--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -15,10 +15,54 @@ header
   .row
     align-items: center
     border-bottom: 2px solid rgb(180, 22, 131)
+$accent-color: #424242
+
+main
+  margin: 20px auto
+  padding: 0 1rem
+  max-width: 80%
+  hr
+    border: 0
+    border-top: 1px solid #eee
+    border-bottom: 1px solid #eee
+    height: 0.25rem
+
+  .title
+    color: $accent-color
+    letter-spacing: 0.025rem
+    text-transform: uppercase
+    float: left
+    font-size: 30px
+    padding-top: 5px
+
+  .menu
+    margin: 0
+    padding: 0
+    text-align: right
+
+  .menu li
+    display: inline
+
+  .menu li a
+    display: inline-block
+    padding: 1rem
+    color: #ccc
+    text-decoration: none
+    text-transform: uppercase
+    transition: all .1s ease
+
+  .menu li a:last-child
+    padding-right: 0
+
+  .menu li a:hover
+    color: rgb(36, 175, 215)
+  span
+    margin-left: 30px
+
 .app
   margin-top: 40px
   &-container
-    margin-top: 40px
+    margin: 40px 20px 40px 20px
 
 .disabled
   opacity: 0.4
@@ -27,25 +71,37 @@ header
   border-radius: 4px
 .accounts
   margin-top: 40px
+  &-items
+    margin: 0
   &-item
+    max-width: 33%
+    min-width: 300px
+    border: 3px solid black
     &-card
-      width: 100%
-      height: 50px
       cursor: pointer
-      line-height: 50px
       font-size: 20px
       background: none
-      text-align: center
       border-radius: 3px
-      border: 2px solid black
       box-sizing: border-box
-      a
+      min-height: 150px
+      padding: 20px
+      .header
+        font-size: 30px
         font-weight: bolder
+        a
+          font-weight: bolder
+      .templates
+        margin-top: 40px
+        &-item
+          margin-right: 20px
       .actions
-        margin-left: 10px
+        position: absolute
+        top: 30px
+        right: 20px
         color: $gray
         a
           margin-left: 5px
+
 .session-card
   margin: 10px 0 10px 0
   border-bottom: 1px solid $gray
@@ -60,3 +116,6 @@ header
         margin-left: 5px
         color: black
         position: relative
+.account-modal
+  .nav
+    margin: 30px 0 30px 0
