saving template data to order

--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -63,7 +63,8 @@ main
   margin-top: 40px
   &-container
     margin: 40px 20px 40px 20px
-
+span.inline
+  padding-left: 10px
 .disabled
   opacity: 0.4
   pointer-events: none
@@ -72,7 +73,7 @@ main
 .accounts
   margin-top: 40px
   &-items
-    margin: 0
+    margin: 50px 0
   &-item
     max-width: 33%
     min-width: 300px
@@ -93,7 +94,7 @@ main
       .templates
         margin-top: 40px
         &-item
-          margin-right: 20px
+          margin-right: 40px
       .actions
         position: absolute
         top: 30px
