add quick sell option

--- a/app/assets/javascripts/client/templates/template_modal.html.haml
+++ b/app/assets/javascripts/client/templates/template_modal.html.haml
@@ -21,6 +21,8 @@
               %option{"value"=>""} -- выбор стратегии --
               %option{"value"=>"default"} обычная
               %option{"value"=>"sell"} только продавать
+              %option{"value"=>"quick_sell"} быстрая продажа
+
         .col-xs
           .form-group
             %label интервал
