--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -78,6 +78,7 @@ span.inline
     max-width: 33%
     min-width: 300px
     border: 3px solid black
+    margin-right: 15px
     &-card
       cursor: pointer
       font-size: 20px
