--- a/app/assets/javascripts/client/templates/account_modal.html.haml
+++ b/app/assets/javascripts/client/templates/account_modal.html.haml
@@ -11,6 +11,7 @@
         %label биржа
         %select.form-control{"ng-model"=>"account.provider"}
           %option{"ng-value"=>"'bittrex'"} Bittrex
+          %option{"ng-value"=>"'poloniex'"} Poloniex
     .col-xs
       .form-group
         %label key
