--- a/app/assets/javascripts/client/templates/template_modal.html.haml
+++ b/app/assets/javascripts/client/templates/template_modal.html.haml
@@ -87,7 +87,7 @@
       .row
         .col-xs
           .form-group
-            %label минимальный объем рынка актива (BTC)
+            %label минимальный объем рынка актива ({{template.currency}})
             %input.form-control{"ng-model"=>"template.min_market_volume"}
 
         .col-xs
