rank volume strategy

--- a/app/assets/javascripts/client/templates/template_modal.html.haml
+++ b/app/assets/javascripts/client/templates/template_modal.html.haml
@@ -22,6 +22,7 @@
               %option{"value"=>"default"} обычная
               %option{"value"=>"sell"} только продавать
               %option{"value"=>"quick_sell"} быстрая продажа
+              %option{"value"=>"rank_volume"} сортировка по рангу
 
         .col-xs
           .form-group
