--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -121,3 +121,13 @@ span.inline
 .account-modal
   .nav
     margin: 30px 0 30px 0
+.download-modal
+  .sheets
+    margin-top: 20px
+    &-block
+      display: inline-block
+      position: relative
+      margin: 5px
+      a
+        color: white
+        font-weight: bolder
