--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -1,4 +1,3 @@
-
 .container
   %main
     %p.title BOT v.1.1
@@ -8,7 +7,8 @@
           %li
             %a{:href => "/"} Биржи
           %li
-            %a{:href => "/download.csv"} Статистика
+            %a{href: "#", "ng-click"=>"downloadStat()"}
+              Статистика
           %li
             %span
               = current_user.email
