--- a/app/assets/javascripts/client/templates/template_modal.html.haml
+++ b/app/assets/javascripts/client/templates/template_modal.html.haml
@@ -23,6 +23,7 @@
               %option{"value"=>"sell"} только продавать
               %option{"value"=>"quick_sell"} быстрая продажа
               %option{"value"=>"rank_volume"} сортировка по рангу
+              %option{"value"=>"trend_trade"} торговля от тренда 
 
         .col-xs
           .form-group
