--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -111,7 +111,7 @@ span.inline
   border-bottom: 1px solid $gray
   font-size: 14px
   overflow: hidden
-  &.empty 
+  &.empty
     padding: 2px 0
     background: $empty
     border-bottom-color: white
@@ -124,7 +124,7 @@ span.inline
     padding: 4px
     margin-bottom: 4px
     p
-      margin-bottom: 4px  
+      margin-bottom: 4px
     &-header
       span
         margin-right: 5px
@@ -144,3 +144,9 @@ span.inline
       a
         color: white
         font-weight: bolder
+.account-wallets
+  &-item
+    font-size: 15px
+    position: relative
+    display: inline-block
+    margin: 10px
