--- a/app/assets/stylesheets/client/all.sass
+++ b/app/assets/stylesheets/client/all.sass
@@ -134,6 +134,10 @@ span.inline
 .account-modal
   .nav
     margin: 30px 0 30px 0
+.template-modal
+  .modal-header
+    span.history
+      font-size: 14px
 .download-modal
   .sheets
     margin-top: 20px
@@ -150,3 +154,6 @@ span.inline
     position: relative
     display: inline-block
     margin: 10px
+    padding: 5px 10px 0 10px
+    border-radius: 3px
+    background: #f5f5f5
