--- a/app/views/templates/show.haml
+++ b/app/views/templates/show.haml
@@ -1,30 +1,93 @@
 .container-fluid{"ng-controller"=>"TemplateCtrl"}
-  %h1 {{template.currency}}
+  %h1
+    {{template.provider}} {{template.currency}}
+    %span.inline.sp-caption{"ng-class"=>"template.need_restart ? 'text-danger' : 'text-success'"}
+      {{template.need_restart ? 'off' : 'on'}}
+    %span.inline.sp-caption
+      {{template.available}} {{template.currency}}
+    %span.inline.sp-caption
+      %button.btn.btn-default
+        %a{href: '#', "ng-click"=>"editTemplate()"}
+          %b
+            конфиг
+    %span.inline.sp-caption
+      %button.btn.btn-default
+        %a{"href"=>"#", "ng-click"=>"openReports()"}
+          %b отчеты
+  %hr
+  .template-wallets
+    .template-wallets-item{{"ng-repeat" => "wallet in template.wallets"}}
+      %p
+        %b
+          {{wallet.currency}}
+        %span
+          {{wallet.available}}
+        %span
+          %b
+            {{template.currency}}
+          {{wallet.available_currency}}
+  %hr
+  %div{"ng-repeat"=>"session in sessions"}
+    .session-card.row.empty{"ng-if"=>"(+session.buy_count + +session.sell_count) == 0 && session.status == 'completed'"}
+      .col-md-3 {{session.date}}
+      .col-md-3 {{session.strategy}}
 
-  %table.table.table-condensed
-    %thead
-      %tr
-        %th #
-        %th стратегия
-        %th.td-address баланс
-        %th.td-payment профит
-        %th когда
-        %th
-    %tbody
-      %tr{"ng-repeat"=>"report in template.reports | orderBy: 'id':true"}
-        %td
-        %th
-          %span
-            {{report.strategy}}
-        %td.td-address
-          %span.address
-            {{report.balance}}
-        %td.td-payment
-          %span
-            {{report.profit}}
-        %td.td-amount
-          %span
-            {{report.date}}
-        %th
-          %span
-        %th
+    .session-card.row{"ng-if"=>"!((+session.buy_count + +session.sell_count) == 0 && session.status == 'completed')"}
+      .col-md-3
+        .session-card-header
+          %h5
+            {{session.date}}
+
+        .session-card-desc
+          %p
+            %button.btn{"ng-class"=>"session.status == 'completed' ? 'btn-success': 'btn-default'"}
+              {{session.status}}
+          %p
+            {{session.buy_count}} buy, {{session.sell_count}} sell
+          %p
+            currency
+            %b
+              {{session.template.currency}}
+          %p
+            strategy
+            %b
+              {{session.strategy}}
+      .col-md-9
+        .session-card-order{"ng-repeat"=>"order in session.orders | orderBy: '-id' "}
+          .session-card-order-header
+            %p
+              %span
+                %b
+                  id
+                {{order.id}}
+              %span
+                %b
+                  chain_id
+                {{order.chain_id}}
+
+            %p{"ng-class"=>"order.type == 'buy' ? 'text-success' : 'text-danger'"}
+              %b {{order.type}}
+              %span
+                {{order.market}}
+              %span
+                | quantity - {{order.quantity}}
+              %span
+                | reason - {{order.reason }}
+              %span
+                | buy_count - {{order.sell_count }}
+              %span
+                | sell_count - {{order.buy_count }}
+              %span
+                | yesterday_price - {{order.yesterday_price }}
+            %p{"ng-if"=>"session.status == 'completed'"}
+              %span{"ng-if"=>"order.type == 'sell' && order.profit", "ng-class"=>"order.profit > 0 ? 'text-success' : 'text-danger'"}
+                %b
+                  profit - {{ order.profit }}
+              %span
+                | price - {{order.price }} |
+              %span
+                | commission - {{order.commission }} |
+              %span
+                | spread - {{order.spread}}
+              %span{}
+                | volume - {{order.volume}}
